# Contactical_Android

./: settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/contacticalattestation/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: proof.json  verification_key.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/gmp/: gmp.h
app/src/main/cpp/witness/: calcwit.cpp  calcwit.hpp  fr.cpp  fr.hpp  jwt_rs256.cpp  jwt_verifier.cpp  native-witness.cpp
app/src/main/java/com/example/contacticalattestation/: MainActivity.kt
app/src/main/java/com/example/contacticalattestation/zk/: NativeProver.kt  NativeWitness.kt  ZkInputGenerator.kt
app/src/main/proto/: contactical.proto
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/contacticalattestation/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
